# molecularSurfaces

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main-LB.cu  main.cu
include/: CMakeLists.txt  application_settings.hpp  atomdata.cuh  atomdata.hpp  camera.h  camera.hpp  cuda_inits.cuh  functions.cuh  helper_gl.h  helper_math.h  inputWindow.hpp  pdbLoader.hpp  performance.hpp  raymarching_kernel.cuh  shader.h  simulation_config.hpp  solver.hpp  solver_newton.hpp  solver_sle.cuh  sorter.cuh  surfaces.hpp  tester_data.cuh
include/glad/: glad.h
include/shaders/: fb_fragment.fs  fb_vertex.vs  ray_fragment.fs  ray_vertex.vs
src/: CMakeLists.txt  glad.c
tests/: CMakeLists.txt  dummy.cpp
